Name:              creatur-examples
Version:           3.0.1
Stability:         experimental
Description:       Examples demonstrating the use of the \"Créatúr\"
                   framework for artificial life experiments.
Synopsis:          Examples demonstrating the use of \"Créatúr\".
License:           BSD3
License-file:      LICENSE
Homepage:          https://github.com/mhwombat/creatur-example
Copyright:         (c) Amy de Buitléir 2010-2012
Author:            Amy de Buitléir
Maintainer:        amy@nualeargais.ie
Build-Type:        Simple
Cabal-Version:     >=1.8

Executable chapter5-daemon
  Main-Is:          Tutorial/Chapter5/Daemon.hs
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    array ==0.4.*,
                    base ==4.*,
                    cereal ==0.3.*,
                    creatur ==3.0.*,
                    directory ==1.2.*,
                    ghc-prim ==0.3.*,
                    hdaemonize ==0.4.*,
                    MonadRandom ==0.1.*,
                    mtl ==2.1.*,
                    old-locale ==1.0.*,
                    split ==0.2.*,
                    time ==1.4.*,
                    transformers ==0.3.*,
                    unix ==2.6.*,
                    zlib ==0.5.*

Executable chapter5-init
  Main-Is:          Tutorial/Chapter5/GeneratePopulation.hs
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    base ==4.*,
                    cereal ==0.3.*,
                    creatur ==3.0.*,
                    directory ==1.2.*,
                    ghc-prim ==0.3.*,
                    MonadRandom ==0.1.*,
                    mtl ==2.1.*,
                    old-locale ==1.0.*,
                    time ==1.4.*,
                    transformers ==0.3.*,
                    zlib ==0.5.*

Executable chapter7-daemon
  Main-Is:          Tutorial/Chapter7/Daemon.hs
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    array ==0.4.*,
                    base ==4.*,
                    cereal ==0.3.*,
                    creatur ==3.0.*,
                    directory ==1.2.*,
                    ghc-prim ==0.3.*,
                    hdaemonize ==0.4.*,
                    MonadRandom ==0.1.*,
                    mtl ==2.1.*,
                    old-locale ==1.0.*,
                    split ==0.2.*,
                    time ==1.4.*,
                    transformers ==0.3.*,
                    unix ==2.6.*,
                    zlib ==0.5.*

Executable chapter7-init
  Main-Is:          Tutorial/Chapter7/GeneratePopulation.hs
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    base ==4.*,
                    cereal ==0.3.*,
                    creatur ==3.0.*,
                    directory ==1.2.*,
                    ghc-prim ==0.3.*,
                    MonadRandom ==0.1.*,
                    mtl ==2.1.*,
                    old-locale ==1.0.*,
                    time ==1.4.*,
                    transformers ==0.3.*,
                    zlib ==0.5.*

Executable chapter8-daemon
  Main-Is:          Tutorial/Chapter8/Daemon.hs
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    array ==0.4.*,
                    base ==4.*,
                    cereal ==0.3.*,
                    creatur ==3.0.*,
                    directory ==1.2.*,
                    ghc-prim ==0.3.*,
                    hdaemonize ==0.4.*,
                    MonadRandom ==0.1.*,
                    mtl ==2.1.*,
                    old-locale ==1.0.*,
                    split ==0.2.*,
                    time ==1.4.*,
                    transformers ==0.3.*,
                    unix ==2.6.*,
                    zlib ==0.5.*

Executable chapter8-init
  Main-Is:          Tutorial/Chapter8/GeneratePopulation.hs
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    base ==4.*,
                    cereal ==0.3.*,
                    creatur ==3.0.*,
                    directory ==1.2.*,
                    ghc-prim ==0.3.*,
                    MonadRandom ==0.1.*,
                    mtl ==2.1.*,
                    old-locale ==1.0.*,
                    time ==1.4.*,
                    transformers ==0.3.*,
                    zlib ==0.5.*

Executable chapter9-daemon
  Main-Is:          Tutorial/Chapter9/Daemon.hs
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    array ==0.4.*,
                    base ==4.*,
                    cereal ==0.3.*,
                    creatur ==3.0.*,
                    directory ==1.2.*,
                    ghc-prim ==0.3.*,
                    hdaemonize ==0.4.*,
                    MonadRandom ==0.1.*,
                    mtl ==2.1.*,
                    old-locale ==1.0.*,
                    split ==0.2.*,
                    time ==1.4.*,
                    transformers ==0.3.*,
                    unix ==2.6.*,
                    zlib ==0.5.*

Executable chapter9-init
  Main-Is:          Tutorial/Chapter9/GeneratePopulation.hs
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    base ==4.*,
                    cereal ==0.3.*,
                    creatur ==3.0.*,
                    directory ==1.2.*,
                    ghc-prim ==0.3.*,
                    MonadRandom ==0.1.*,
                    mtl ==2.1.*,
                    old-locale ==1.0.*,
                    random ==1.0.*,
                    time ==1.4.*,
                    transformers ==0.3.*,
                    zlib ==0.5.*

Executable chapter10-daemon
  Main-Is:          Tutorial/Chapter10/Daemon.hs
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    array ==0.4.*,
                    base ==4.*,
                    cereal ==0.3.*,
                    creatur ==3.0.*,
                    directory ==1.2.*,
                    ghc-prim ==0.3.*,
                    hdaemonize ==0.4.*,
                    MonadRandom ==0.1.*,
                    mtl ==2.1.*,
                    old-locale ==1.0.*,
                    split ==0.2.*,
                    time ==1.4.*,
                    transformers ==0.3.*,
                    unix ==2.6.*,
                    zlib ==0.5.*

Executable chapter10-init
  Main-Is:          Tutorial/Chapter10/GeneratePopulation.hs
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    base ==4.*,
                    cereal ==0.3.*,
                    creatur ==3.0.*,
                    directory ==1.2.*,
                    ghc-prim ==0.3.*,
                    MonadRandom ==0.1.*,
                    mtl ==2.1.*,
                    old-locale ==1.0.*,
                    time ==1.4.*,
                    transformers ==0.3.*,
                    zlib ==0.5.*

Executable chapter11
  Main-Is:          Tutorial/Chapter11/Example.hs
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    base ==4.*,
                    cereal ==0.3.*,
                    creatur ==3.0.*,
                    directory ==1.2.*,
                    ghc-prim ==0.3.*,
                    MonadRandom ==0.1.*,
                    mtl ==2.1.*,
                    old-locale ==1.0.*,
                    time ==1.4.*,
                    transformers ==0.3.*,
                    zlib ==0.5.*

