Name:              creatur-examples
Version:           5.9.5
-- keep in sync with créatúr, update tutorial and dependencies below
Stability:         experimental
Description:       Examples demonstrating the use of the \"Créatúr\"
                   framework for artificial life experiments.
Synopsis:          Examples demonstrating the use of \"Créatúr\".
License:           BSD3
License-file:      LICENSE
Homepage:          https://github.com/mhwombat/creatur-example
Bug-reports:       https://github.com/mhwombat/creatur-examples/issues
Copyright:         (c) 2010-2022 Amy de Buitléir
Author:            Amy de Buitléir
Maintainer:        amy@nualeargais.ie
Build-Type:        Simple
Cabal-Version:     >=1.8

source-repository head
  type:     git
  location: https://github.com/mhwombat/creatur-examples.git

source-repository this
  type:     git
  location: https://github.com/mhwombat/creatur-examples.git
  tag:      5.9.5

Executable chapter5-daemon
  Main-Is:          Tutorial/Chapter5/Daemon.hs
  Other-modules:    Tutorial.Chapter5.Rock
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    array                 >= 0.5.4 && < 0.6,
                    base                  >= 4.15.1 && < 4.16,
                    cereal                >= 0.5.8 && < 0.6,
                    creatur               >= 5.9.30 && < 5.10,
                    directory             >= 1.3.6 && < 1.4,
                    ghc-prim              >= 0.7.0 && < 0.8,
                    hdaemonize            >= 0.5.6 && < 0.6,
                    MonadRandom           >= 0.5.3 && < 0.6,
                    mtl                   >= 2.2.2 && < 2.3,
                    old-locale            >= 1.0.0 && < 1.1,
                    split                 >= 0.2.3 && < 0.3,
                    time                  >= 1.9.3 && < 1.10,
                    transformers          >= 0.5.6 && < 0.6,
                    unix                  >= 2.7.2 && < 2.8,
                    zlib                  >= 0.6.3 && < 0.7

Executable chapter5-init
  Main-Is:          Tutorial/Chapter5/GeneratePopulation.hs
  Other-modules:    Tutorial.Chapter5.Rock
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    base                  >= 4.15.1 && < 4.16,
                    cereal                >= 0.5.8 && < 0.6,
                    creatur               >= 5.9.30 && < 5.10,
                    directory             >= 1.3.6 && < 1.4,
                    ghc-prim              >= 0.7.0 && < 0.8,
                    MonadRandom           >= 0.5.3 && < 0.6,
                    mtl                   >= 2.2.2 && < 2.3,
                    old-locale            >= 1.0.0 && < 1.1,
                    time                  >= 1.9.3 && < 1.10,
                    transformers          >= 0.5.6 && < 0.6,
                    zlib                  >= 0.6.3 && < 0.7

Executable chapter7-daemon
  Main-Is:          Tutorial/Chapter7/Daemon.hs
  Other-modules:    Tutorial.Chapter7.Plant
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    array                 >= 0.5.4 && < 0.6,
                    base                  >= 4.15.1 && < 4.16,
                    cereal                >= 0.5.8 && < 0.6,
                    creatur               >= 5.9.30 && < 5.10,
                    directory             >= 1.3.6 && < 1.4,
                    ghc-prim              >= 0.7.0 && < 0.8,
                    hdaemonize            >= 0.5.6 && < 0.6,
                    MonadRandom           >= 0.5.3 && < 0.6,
                    mtl                   >= 2.2.2 && < 2.3,
                    old-locale            >= 1.0.0 && < 1.1,
                    split                 >= 0.2.3 && < 0.3,
                    time                  >= 1.9.3 && < 1.10,
                    transformers          >= 0.5.6 && < 0.6,
                    unix                  >= 2.7.2 && < 2.8,
                    zlib                  >= 0.6.3 && < 0.7

Executable chapter7-init
  Main-Is:          Tutorial/Chapter7/GeneratePopulation.hs
  Other-modules:    Tutorial.Chapter7.Plant
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    base                  >= 4.15.1 && < 4.16,
                    cereal                >= 0.5.8 && < 0.6,
                    creatur               >= 5.9.30 && < 5.10,
                    directory             >= 1.3.6 && < 1.4,
                    ghc-prim              >= 0.7.0 && < 0.8,
                    MonadRandom           >= 0.5.3 && < 0.6,
                    mtl                   >= 2.2.2 && < 2.3,
                    old-locale            >= 1.0.0 && < 1.1,
                    time                  >= 1.9.3 && < 1.10,
                    transformers          >= 0.5.6 && < 0.6,
                    zlib                  >= 0.6.3 && < 0.7

Executable chapter8-daemon
  Main-Is:          Tutorial/Chapter8/Daemon.hs
  Other-modules:    Tutorial.Chapter8.Bug
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    array                 >= 0.5.4 && < 0.6,
                    base                  >= 4.15.1 && < 4.16,
                    cereal                >= 0.5.8 && < 0.6,
                    creatur               >= 5.9.30 && < 5.10,
                    directory             >= 1.3.6 && < 1.4,
                    ghc-prim              >= 0.7.0 && < 0.8,
                    hdaemonize            >= 0.5.6 && < 0.6,
                    MonadRandom           >= 0.5.3 && < 0.6,
                    mtl                   >= 2.2.2 && < 2.3,
                    old-locale            >= 1.0.0 && < 1.1,
                    split                 >= 0.2.3 && < 0.3,
                    time                  >= 1.9.3 && < 1.10,
                    transformers          >= 0.5.6 && < 0.6,
                    unix                  >= 2.7.2 && < 2.8,
                    zlib                  >= 0.6.3 && < 0.7

Executable chapter8-init
  Main-Is:          Tutorial/Chapter8/GeneratePopulation.hs
  Other-modules:    Tutorial.Chapter8.Bug
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    base                  >= 4.15.1 && < 4.16,
                    cereal                >= 0.5.8 && < 0.6,
                    creatur               >= 5.9.30 && < 5.10,
                    directory             >= 1.3.6 && < 1.4,
                    ghc-prim              >= 0.7.0 && < 0.8,
                    MonadRandom           >= 0.5.3 && < 0.6,
                    mtl                   >= 2.2.2 && < 2.3,
                    old-locale            >= 1.0.0 && < 1.1,
                    time                  >= 1.9.3 && < 1.10,
                    transformers          >= 0.5.6 && < 0.6,
                    zlib                  >= 0.6.3 && < 0.7

Executable chapter9-daemon
  Main-Is:          Tutorial/Chapter9/Daemon.hs
  Other-modules:    Tutorial.Chapter9.Bug
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    array                 >= 0.5.4 && < 0.6,
                    base                  >= 4.15.1 && < 4.16,
                    cereal                >= 0.5.8 && < 0.6,
                    creatur               >= 5.9.30 && < 5.10,
                    directory             >= 1.3.6 && < 1.4,
                    ghc-prim              >= 0.7.0 && < 0.8,
                    hdaemonize            >= 0.5.6 && < 0.6,
                    MonadRandom           >= 0.5.3 && < 0.6,
                    mtl                   >= 2.2.2 && < 2.3,
                    old-locale            >= 1.0.0 && < 1.1,
                    split                 >= 0.2.3 && < 0.3,
                    time                  >= 1.9.3 && < 1.10,
                    transformers          >= 0.5.6 && < 0.6,
                    unix                  >= 2.7.2 && < 2.8,
                    zlib                  >= 0.6.3 && < 0.7

Executable chapter9-init
  Main-Is:          Tutorial/Chapter9/GeneratePopulation.hs
  Other-modules:    Tutorial.Chapter9.Bug
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    base                  >= 4.15.1 && < 4.16,
                    cereal                >= 0.5.8 && < 0.6,
                    creatur               >= 5.9.30 && < 5.10,
                    directory             >= 1.3.6 && < 1.4,
                    ghc-prim              >= 0.7.0 && < 0.8,
                    MonadRandom           >= 0.5.3 && < 0.6,
                    mtl                   >= 2.2.2 && < 2.3,
                    old-locale            >= 1.0.0 && < 1.1,
                    random                >= 1.2.1 && < 1.3,
                    time                  >= 1.9.3 && < 1.10,
                    transformers          >= 0.5.6 && < 0.6,
                    zlib                  >= 0.6.3 && < 0.7

Executable chapter10-daemon
  Main-Is:          Tutorial/Chapter10/Daemon.hs
  Other-modules:    Tutorial.Chapter10.Bug
                    Tutorial.Chapter10.Martian
                    Tutorial.Chapter10.Plant
                    Tutorial.Chapter10.Rock
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    array                 >= 0.5.4 && < 0.6,
                    base                  >= 4.15.1 && < 4.16,
                    cereal                >= 0.5.8 && < 0.6,
                    creatur               >= 5.9.30 && < 5.10,
                    directory             >= 1.3.6 && < 1.4,
                    ghc-prim              >= 0.7.0 && < 0.8,
                    hdaemonize            >= 0.5.6 && < 0.6,
                    MonadRandom           >= 0.5.3 && < 0.6,
                    mtl                   >= 2.2.2 && < 2.3,
                    old-locale            >= 1.0.0 && < 1.1,
                    random                >= 1.2.1 && < 1.3,
                    split                 >= 0.2.3 && < 0.3,
                    time                  >= 1.9.3 && < 1.10,
                    transformers          >= 0.5.6 && < 0.6,
                    unix                  >= 2.7.2 && < 2.8,
                    zlib                  >= 0.6.3 && < 0.7

Executable chapter10-init
  Main-Is:          Tutorial/Chapter10/GeneratePopulation.hs
  Other-modules:    Tutorial.Chapter10.Bug
                    Tutorial.Chapter10.Martian
                    Tutorial.Chapter10.Plant
                    Tutorial.Chapter10.Rock
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    base                  >= 4.15.1 && < 4.16,
                    cereal                >= 0.5.8 && < 0.6,
                    creatur               >= 5.9.30 && < 5.10,
                    directory             >= 1.3.6 && < 1.4,
                    ghc-prim              >= 0.7.0 && < 0.8,
                    MonadRandom           >= 0.5.3 && < 0.6,
                    mtl                   >= 2.2.2 && < 2.3,
                    old-locale            >= 1.0.0 && < 1.1,
                    random                >= 1.2.1 && < 1.3,
                    time                  >= 1.9.3 && < 1.10,
                    transformers          >= 0.5.6 && < 0.6,
                    zlib                  >= 0.6.3 && < 0.7

Executable chapter11
  Main-Is:          Tutorial/Chapter11/Example.hs
  GHC-Options:      -Wall
  Hs-source-dirs:   src
  Build-Depends:    base                  >= 4.15.1 && < 4.16,
                    cereal                >= 0.5.8 && < 0.6,
                    creatur               >= 5.9.30 && < 5.10,
                    directory             >= 1.3.6 && < 1.4,
                    ghc-prim              >= 0.7.0 && < 0.8,
                    MonadRandom           >= 0.5.3 && < 0.6,
                    mtl                   >= 2.2.2 && < 2.3,
                    old-locale            >= 1.0.0 && < 1.1,
                    time                  >= 1.9.3 && < 1.10,
                    transformers          >= 0.5.6 && < 0.6,
                    zlib                  >= 0.6.3 && < 0.7

